--- a/MOMA.html
+++ b/MOMA.html
@@ -50,7 +50,7 @@
             <div class="pic index2-picture" style="background: url(assets/images/Urbandesign01.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3><b>The Seclusion Garden in MOMA</b>
+                    <h3><b>The CAP In New York City</b>
                     </h3>
                 </div>
             </div>
@@ -69,16 +69,12 @@
                     <div class="col-md-5">
                         <h3>The Seclusion Garden in MOMA</h3>
                         <h4>Creating a Space for Seclusion in the City of New York</h4>
-                        <p>The concept of Tri-boro line was introduced by RPA as the infrastructure investment that directly links the the east borough with the Manhattan-centric subway system. Based on the study of the Tri-boro line, the studio elaborates the dirct impacts of this potential on the neighborhood adjacant to the propsed station stops.
-                          <br>
-                          <br>
-                        <p> The selected site is in Queens, New York City. It Lies next to St. Michael Cemetery and close to La Guardia Airport and M, R Train Northern Blvd Station. Because of its location within the regional context, our site has great potential to be developed in the future which provide new housing, new working space, new business, and new connections through Tri-Boro line and subway. 
-                          <br>
-                          <br>
-                        <p> This is a sustainable urban design project that emphasize on greater mobulity, better access to jobs, and opportunities for transit oriented development.
-                            It reconnects the isolated districts and establishes a continues network of public realm and amenities and change it into a destination for both New York city and surrounding neighborhood.
-                          <br>
+                        <p>The Tri-Boro Line concept, introduced by the RPA, envisions an infrastructure investment that directly connects the eastern boroughs with the Manhattan-centric subway system. Building on this proposal, the studio examines the direct impacts this potential transit line could have on neighborhoods adjacent to the proposed station stops.
                           <br>                          
+                        <p> The selected site is located in Queens, New York City, adjacent to St. Michael Cemetery and near LaGuardia Airport and the M/R Train Northern Blvd Station. Its strategic location within the regional context offers significant potential for future development, enabling opportunities for new housing, workspaces, businesses, and enhanced connectivity through the Tri-Boro Line and subway network. 
+                          <br>                          
+                        <p> This sustainable urban design project focuses on enhancing mobility, improving access to jobs, and creating opportunities for transit-oriented development. It aims to reconnect isolated districts, establish a continuous network of public spaces and amenities, and transform the area into a vibrant destination for both New York City and its surrounding neighborhoods.
+                          <br>                                                   
                         <div class="details">
                             <h6> Instructor </h6>
                             <span>Professor Nicholas Pevzner</span>
