--- a/MOMA.html
+++ b/MOMA.html
@@ -67,8 +67,8 @@
                         <br>                       
                     </div>
                     <div class="col-md-5">
-                        <h3>The Seclusion Garden in MOMA</h3>
-                        <h4>Creating a Space for Seclusion in the City of New York</h4>
+                        <h3>The CAP</h3>
+                        <h4>A Connective Pathway: Bridging and Reuniting Communities and Spaces</h4>
                         <p>The Tri-Boro Line concept, introduced by the RPA, envisions an infrastructure investment that directly connects the eastern boroughs with the Manhattan-centric subway system. Building on this proposal, the studio examines the direct impacts this potential transit line could have on neighborhoods adjacent to the proposed station stops.
                           <br>                          
                         <p> The selected site is located in Queens, New York City, adjacent to St. Michael Cemetery and near LaGuardia Airport and the M/R Train Northern Blvd Station. Its strategic location within the regional context offers significant potential for future development, enabling opportunities for new housing, workspaces, businesses, and enhanced connectivity through the Tri-Boro Line and subway network. 
