--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -74,124 +74,105 @@
      		   </div>
 			</div>
 
+			</div>			
+			<div class="second-section">
+				<div class="filters">
+					<ul id="filters">
+						<li class="active" data-filter="*">All</li>
+						<li data-filter=".data">Data Science</li>
+						<li data-filter=".geo">Geospatial Analysis</li>
+						<li data-filter=".design">Design & Visualization</li>
+					</ul>
+				</div>
+			</div>
+
 			<div class="row masonry">
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
-						<img src="assets/images/Venmo-02.jpg" alt="">
+						<img src="assets/images/Land-Ahoy.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="VenmoCard.html">Venmo Card Business Analytics</a></h3>
-								<h5><a href="VenmoCard.html">Venmo Card KPIs Analytics and Dashboard Design</a></h5>
+								<h3><a href="InterpretingLandCover.html">Interpreting LandCover
+									<br>
+									</a></h3>
+								<h5><a href="InterpretingLandCover.html">Enhancing Remote Sensing Literacy for Environmental Impact Studies</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/doordash.png" alt="">
+						<img src="assets/images/Distichlis-Sensing_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="DoorDash.html">DoorDash Operations Data Analytics</a></h3>
-								<h5><a href="DoorDash.html">Recommend Improvements to DoorDash’s Operations Strategy through Data Analytics</a></h5>
+								<h3><a href="DistichlisSensing.html">Distichlis Sensing
+									<h5><a href="DistichlisSensing.html">Environmental Modeling Lab Project:
+									<br>Using UAS multispectral imagery to improve marsh classification in NJ Coast</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector geo">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/Audubon.jpg" alt="">
+						<img src="assets/images/EJ_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="AudubonAlaska.html">Ecological Analysis of the Arctic National Wildlife Refuge</a></h3>
-								<h5><a href="AudubonAlaska.html">Azavea Summer of Maps Project:
-									<br>Ecological Analysis of Arctic National Wildlife Refuge with Audubon Alaska</a></h5>
+								<h3><a href="EnviroJustice.html"> Envirnmental Justice Study
+									<br>
+									</a></h3> 
+								<h5><a href="EnviroJustice.html">An Inclusive Approach to Equitable Resource Distribution and Community Impact within LTER Boundary</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector geo">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector geo">
 					<div class="item">
-						<img src="assets/images/NA.jpg" alt="">
+						<img src="assets/images/GreenNewDeal_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="NationalAquarium.html">Identifying Patterns In Mid-Atlantic Marine Debris</a></h3>
-								<h5><a href="NationalAquarium.html">Azavea Summer of Maps Project with National Aquarium</a></h5>
+								<h3><a href="GreenNewDeal.html">Designing a <br>Green New Deal</a></h3>
+								<h5><a href="GreenNewDeal.html">ASLA Award Project:
+									The spatial politics for our response
+to climate change for decarbonization through regenerative agriculture, 
+factory closures, and ecological restoration</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/Minneapolis.png" alt="">
+						<img src="assets/images/EPA_bg1.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="LeadInspection.html">Predicting Household Lead Inspection Result</a></h3>
-								<h5><a href="LeadInspection.html">Using Multiple Machine Learning Models</a></h5>
+								<h3><a href="EPA.html">Campus Rainwork Challenge: Growing Together</a></h3>
+								<h5><a href="EPA.html">EPA Award Project: A COMMUNITY FOOD FOREST FOR STORMWATER
+MANAGEMENT AT ANDREW HAMILTON
+SCHOOL</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector geo">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/MonarchButterfly.jpg" alt="">
+						<img src="assets/images/urbandesign_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="MonarchButterfly.html">Where are the Monarch Butterflies?</a></h3>
-								<h5><a href="MonarchButterfly.html">A Brief Exploration of
-Monarch Butterfly Population Change from 1997-2007
-Using Google Earth Engine API and ArcPy</a></h5>
+								<h3><a href="MOMA.html">The CAP</a></h3>
+								<h5><a href="MOMA.html">A Connecive Pathway for Bridging and Capping the communities together</a></h5>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>				
 
-				<div class="col-md-3 col-sm-6 col-xs-12 selector design">
+				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
-						<img src="assets/images/ED.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="ED.html">The Exchange District</a></h3>
-								<h5><a href="ED.html">Exchanging challenges with opportunities and risks with strengths for Toronto,
-Urban Land Institute (ULI) Hines Student Competition Entry</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
-					<div class="item">
-						<img src="assets/images/FoodInspection.png" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="FoodInspection.html">Predicting Food Inspection Failure</a></h3>
-								<h5><a href="FoodInspection.html">And Designing An App Using Logistic Regression
-to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector design">
-					<div class="item">
-						<img src="assets/images/MOMA.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="MOMA.html">The Seclusion Garden in MOMA</a></h3>
-								<h5><a href="MOMA.html">Creating a Landscape for Seclusion in the City of New York</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
-					<div class="item">
-						<img src="assets/images/calgary.png" alt="">
+						<img src="assets/images/FloodInnundation.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="FloodInnundation.html">Predicting Flood Inundation</a></h3>
@@ -199,84 +180,30 @@ to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
 							</div>
 						</div>
 					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data ">
+				</div>	
+				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
-						<img src="assets/images/boston_nh.jpg" alt="">
+						<img src="assets/images/FoodInspection.png" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
-								<h3><a href="HomePrice.html">Hedonic Home Price Prediction</a></h3>
-								<h5><a href="HomePrice.html">Using Ordinary Least Squares (OLS) Regression to Predict Home Sale Prices in Boston</a></h5>
+								<h3><a href="FoodInspection.html">Predicting <br>Food Inspection Failure</a></h3>
+								<h5><a href="FoodInspection.html">And Designing An App Using Logistic Regression
+to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
+							</div>
+						</div>
+					</div>
+				</div>					
+				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
+					<div class="item">
+						<img src="assets/images/UrbanGrowth_bg.jpg" alt="">
+						<div class="overlay">
+							<div class="overlay-inner">
+								<h3><a href="UrbanGrowth.html">Predicting Urban Growth <br> 2020 Developement Demand <br>in Delaware valley Region</a></h3>
+								<h5><a href="UrbanGrowth.html">Using logistic regression, Spatial cross-validation and extreme gradient boosting</a></h5>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector geo ">
-					<div class="item">
-						<img src="assets/images/philly_green.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="PennsylvaniaEnvironment.html">Urban Growth VS Sustainability</a></h3>
-								<h5><a href="PennsylvaniaEnvironment.html">Analyzing Urban Growth and Site Suitability for Sustainable Future Development in Pennsylvania Using Raster Overlay</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
-					<div class="item">
-						<img src="assets/images/single_ladies.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="PhillySingle.html">Where are the Single Ladies?</a></h3>
-								<h5><a href="PhillySingle.html">Displaying the numbers and locations of single ladies in Philadelphia
-based on the Census data from 2010 to 2016</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
-					<div class="item">
-						<img src="assets/images/cityhall.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="PhillyFraud.html">Where Do Frauds Happen in Philadelphia?</a></h3>
-								<h5><a href="PhillyFraud.html">Displaying the Number of Frauds in Philadelphia Streets
-Based on the Ten Years of Crime Data from OpenDataPhilly</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector data">
-					<div class="item">
-						<img src="assets/images/Philadlephia_watercolor.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="https://public.tableau.com/profile/xiao.wu#!/vizhome/Phil_education_15702475711960/Dashboard1">Where are the schools in Philadelphia?</a></h3>
-								<h5><a href="https://public.tableau.com/profile/xiao.wu#!/vizhome/Phil_education_15702475711960/Dashboard1">Displaying Various School Types in Philadelphia</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 selector geo">
-					<div class="item">
-						<img src="assets/images/philly_collage.jpg" alt="">
-						<div class="overlay">
-							<div class="overlay-inner">
-								<h3><a href="UGB.html">Analyzing Urban Growth Boundary</a></h3>
-								<h5><a href="UGB.html">Using ArcMap to analyze the most suitable town for expanding the urban growth boundary</a></h5>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
 		<!-- <div class="btn-load-more">
 			<button class="load-more">
 			Load More
