--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -12,7 +12,7 @@
 		</script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Xiao WU</title>
+		<title>Leila Bahrami</title>
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -29,7 +29,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="logo">
-							<h2><a href="index.html">Xiao WU</a></h2>
+							<h2><a href="index.html">Leila Bahrami</a></h2>
 						</div>
 					</div>
 					<div class="col-md-8">
@@ -212,7 +212,7 @@ to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
 
 		<footer>
 			<div class="main-footer">
-				<p> Copyright © 2019 By Xiao WU</p>
+				<p> Copyright © 2024 By Leila Bahrami</p>
 				<p>Made with Bootstrap Jquery.</p>
 				<div class="icons">
 					<ul>
@@ -220,9 +220,7 @@ to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
 						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
 						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
 						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
-						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
-						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
+						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->						
 					</ul>
 				</div>
 			</div>
