--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       </script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Xiao WU</title>
+        <title>Leila Bahrami</title>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="logo">
-                            <h2><a href="index.html">Xiao WU</a></h2>
+                            <h2><a href="index.html">Leila Bahrami</a></h2>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -62,17 +62,17 @@
                             <div class="line"></div> -->
                             <p>
                                 <!-- Email:
-                                <br> echo.xiaowu1993@gmail.com
+                                <br> lbahrami69@gmail.com
                                 <br>
                                 <br>Cell:
-                                <br> (484) 909 3980
+                                <br> (215) 866 7997
                                 <br>
                                 <br> -->
                                 <!-- LinkedIn:
-                                <br> <a href="https://www.linkedin.com/in/xiaowu2018/">xiaowu2018</a>
+                                <br> <a href="https://www.linkedin.com/in/leila-bahrami-363127137/</a>
                                 <br>
                                 <br>Github:
-                                <br> <a href="https://github.com/EchoWOO">EchoWOO</a>
+                                <br> <a href="https://github.com/lbahrami">Lbahrami</a>
                                 <br>
                                 <br> -->
                                 <img src="assets/images/girls_for_contact.png" alt="">
@@ -111,17 +111,15 @@
         </div>
         <footer>
             <div class="main-footer">
-                <p> Copyright © 2019 By Xiao WU</p>
+                <p> Copyright © 2024 By Leila Bahrami</p>
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
-                      <li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
-          						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
+                      <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
+          						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
           						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
           						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
-          						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
-          						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
+          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->          						
                     </ul>
                 </div>
             </div>
