--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -204,11 +204,11 @@ to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
 				<p>Made with Bootstrap Jquery.</p>
 				<div class="icons">
 					<ul>
-						<li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
-						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
-						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->						
+						<li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
+						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
+						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"><i class="fa fa-facebook"></i> </a></li>						
+						<!-- <li><a target="_BLANK" href="https://www.instagram.com/leyli_bahrami/"><i class="fa fa-instagram"></i> </a></li>-->			
+						
 					</ul>
 				</div>
 			</div>
@@ -221,3 +221,4 @@ to Help Parents Find Healthy Children’s Food in Chicago</a></h5>
 	    <script src="assets/js/main.js"></script>
 	</body>
 </html>
+
