--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<img src="assets/images/dog_collage.jpg" alt="">
 						</div>
 						<div class="pic-inner">
-							<h3><a href="dogbreed_CNN.html">Convolutional Neural Network Dog Breed Classifier</a>
+							<h3><a href="dogbreed_CNN.html">Health and social inequalities in Urban Heat Exposure Areas in New Orleans</a>
 							</h3>
 							<span>2024-10-01</span>
 							<p> Can you tell what breed is this dog?
