--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		</script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Xiao WU</title>
+		<title>Leila Bahrami</title>
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,700|Quattrocento+Sans:400,700|Palanquin:400,600|Raleway|Josefin+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="assets/css/font-awesome.css">
 		<link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -49,7 +49,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="logo">
-							<h2><a href="index.html">Xiao WU</a></h2>
+							<h2><a href="index.html">Leila Bahrami</a></h2>
 						</div>
 					</div>
 					<div class="col-md-8">
@@ -86,7 +86,7 @@
 					<div class="col-md-5 col-sm-6 col-xs-12">
 						<h3> About Me </h3>
 						<div class="line"></div>
-						<!-- <a href="https://drive.google.com/file/d/1cYHqgN7IrKmEBvO0LHYP1YN3GDKIkITK/view?usp=sharing"> Resume Download</a> -->
+						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
@@ -154,7 +154,7 @@
 			<div class="container-fluid main-container">
 			<hr />
 			<div id="header">
-				<h2>Xiao Wu</h2>
+				<h2>Leila Bahrami</h2>
 				<div class="line"></div>
 			</div>
 			<div id="professional-experience">
@@ -330,17 +330,14 @@
 		<br>
 		<footer>
 			<div class="main-footer">
-				<p> Copyright © 2019 By Xiao WU</p>
+				<p> Copyright © 2024 By Leila Bahrami</p>
 				<p>Made with Bootstrap Jquery.</p>
 				<div class="icons">
 					<ul>
-						<li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
-						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
-						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
-						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
-						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
+						<li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
+						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
+						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"><i class="fa fa-facebook"></i> </a></li>						
+						<!-- <li><a target="_BLANK" href="https://www.instagram.com/leyli_bahrami/"><i class="fa fa-instagram"></i> </a></li>-->
 					</ul>
 				</div>
 			</div>
