--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<br>
 						<br>
 						<img src="assets/images/Leila1.jpg" alt="">												
-						<!-- <a href="https://drive.google.com/file/d/12F5urNvZ26zQRRtCNu8_uFv2-gfcuu_i/view"> Resume Download</a> -->
+						<!-- <a href="about.html"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<h3> Research Interest </h3>
