--- a/about.html
+++ b/about.html
@@ -106,6 +106,11 @@
 				</div>
 			</div>
 		</div>
+				<div class="container">
+				<div class="row items2 ">
+					<div class="col-md-4 grid-item ">
+						<div class="picture">
+							<img src="assets/images/dog_collage.jpg" alt="">
 
 		<style type="text/css">
 			body{ /* Normal  */
