--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<h3><a href="BaltimoreUHI.html">Impacts of Land Use and Socioeconomic Patterns on Urban Heat Island in Baltimore City
 								</a></h3>
 							<span>2020-05-01</span>
-							<p> Are you curious about how much your home/apartment/room/living room sofa is worth on Airbnb? Let me show you some findings from an exploratory analysis on the Airbnb listing prices in Seattle and Boston.
+							<p> This paper examines the relationship between land surface temperature (LST), land use, and socioeconomic variables, highlighting disparities in heat exposure. It identifies impervious surfaces and vegetation as primary drivers and explores equity-focused strategies to mitigate urban heat impacts.
 								<div class="btn-load-more">
 								<a class="load-more" href="blog_airbnb_price.html">Read More</a>
 							</div>
