--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div id="menu" class="menu">
 							<ul>
 								<li><a href="index.html" class="active">Home</a></li>
-								<li><a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view">Resume</a></li>
+								<li><a href="about.html">Resume</a></li>
 								<li><a href="portfolio-4.html">Portfolio</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li>
