--- a/index.html
+++ b/index.html
@@ -116,9 +116,16 @@
 							<h3><a href="dogbreed_CNN.html">Health and social inequalities in Urban Heat Exposure Areas in New Orleans</a>
 							</h3>
 							<span>2024-10-01</span>
-							<p> Can you tell what breed is this dog?
-								<br>
-								Building my first Computer Vision project using Convolutional Neural Network and applying transfer learning to recognize dog breeds step by step.</p>
+							<p> How do health and social inequalities shape urban heat exposure in New Orleans?
+								<br>								
+								This study examines disparities in urban heat exposure across New Orleans, identifying vulnerable populations and analyzing the health impacts. It leverages geospatial and socioeconomic data to propose equitable strategies for mitigating heat-related risks and improving community resilience.
+
+
+
+
+
+
+</p>
 								<div class="btn-load-more">
 								<a class="load-more" href="dogbreed_CNN.html">Read More</a>
 							</div>
