--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 				<div class="row items2 ">
 					<div class="col-md-4 grid-item ">
 						<div class="picture">
-							<img src="assets/images/dog_collage.jpg" alt="">
+							<img src="assets/images/Bahrami_Leila_Resume.pdf" alt="">
 
 		<style type="text/css">
 			body{ /* Normal  */
