--- a/about.html
+++ b/about.html
@@ -93,7 +93,10 @@
 						<br>
 						<p> In the past three years, I have collaborated with multiple teams with diverse background on a span of very different projects in a fast-paced, enthusiastic environment. I worked closely with product management, business development, policy, and data science, as well as municipal staff across North America and Europe at Uber. My projects have a broad span from market size prediction to dashboard implementation, also from assisting data migration to creating internal team websites.</p>
 						<br>
-						<p> I always have curiosity, passion and collaborative spirit to work in an innovative field and contribute my skills to optimizing business decisions or creating successful products.</p>
+						<p> My research combines urban planning, environmental modeling, and climate science to address the challenges of climate resilience, with a
+focus on mitigating heat exposure and its social and health inequities. I explore the asymmetric impacts of extreme weather events on vulnerable
+communities and critical infrastructure. Through advanced methodologies in GIS, machine learning, remote sensing, and spatial statistics, I develop
+actionable, data-driven strategies to tackle complex climate challenges, promote equity, and guide sustainable urban planning and adaptation efforts.</p>
 						<div class="btn-load-more">
 						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
 						<br>
