--- a/about.html
+++ b/about.html
@@ -109,10 +109,9 @@ actionable, data-driven strategies to tackle complex climate challenges, promote
 				</div>
 			</div>
 		</div>
-				<div class="container">
-				<div class="row items2 ">
-					<div class="col-md-1 grid-item ">
-						<div class="picture">
+				<div class="container">				
+					<div class="col-md-8 grid-item ">
+						<div class="item">
 							<img src="assets/images/Resume1.jpg" alt="">
 							<img src="assets/images/Resume2.jpg" alt="">
 							<img src="assets/images/Resume3.jpg" alt="">
