--- a/about.html
+++ b/about.html
@@ -89,19 +89,17 @@
 						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
-						<p>I am an experienced data analyst specialized in product analytics, machine learning and visual communication.</p>
-						<br>
-						<p> In the past three years, I have collaborated with multiple teams with diverse background on a span of very different projects in a fast-paced, enthusiastic environment. I worked closely with product management, business development, policy, and data science, as well as municipal staff across North America and Europe at Uber. My projects have a broad span from market size prediction to dashboard implementation, also from assisting data migration to creating internal team websites.</p>
-						<br>
+						<p>I am an experienced enviornmental planner and designer specialized in climate modeling, spatila na;ysis, machine learning and visual communication.</p>
+						<br>						
 						<p> My research combines urban planning, environmental modeling, and climate science to address the challenges of climate resilience, with a
 focus on mitigating heat exposure and its social and health inequities. I explore the asymmetric impacts of extreme weather events on vulnerable
 communities and critical infrastructure. Through advanced methodologies in GIS, machine learning, remote sensing, and spatial statistics, I develop
 actionable, data-driven strategies to tackle complex climate challenges, promote equity, and guide sustainable urban planning and adaptation efforts.</p>
 						<div class="btn-load-more">
-						<center><a class="load-more" href="https://drive.google.com/file/d/134RnxrzbGZfj5cg86Rgr906fQNxmiV6G/view?usp=sharing">Resume</a></center>
+						<center><a class="load-more" href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view">Resume</a></center>
 						<br>
 						<br>
-						<center><a class="load-more" href="https://drive.google.com/file/d/1K98vu8KKrwVCq48R5IEd1nQoc6hmGThJ/view?usp=sharing">Portfolio</a></center>
+						<center><a class="load-more" href="https://issuu.com/lbahrami69/docs/leila_bahrami_-_research_design_portfolio">Portfolio</a></center>
 						<br>
 						<br>
 						<div>
