--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@
 			<div class="pic about-picture" style="background: url(assets/images/aboutimage3.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3> Data Analyst </h3>
+					<h3> Enviornmental Planner </h3>
 					<br>
 					<br>
-					<h3> Product Designer </h3>
+					<h3> Urban Resilient Expert </h3>
 					<br>
 					<br>
 					<h3> Story Teller </h3>
