--- a/contact.html
+++ b/contact.html
@@ -115,11 +115,10 @@
                 <p>Made with Bootstrap Jquery.</p>
                 <div class="icons">
                     <ul>
-                      <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
-          						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
-          						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-          						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->          						
+                        <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
+						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
+						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"><i class="fa fa-facebook"></i> </a></li>						
+						<!-- <li><a target="_BLANK" href="https://www.instagram.com/leyli_bahrami/"><i class="fa fa-instagram"></i> </a></li>-->          						
                     </ul>
                 </div>
             </div>
