--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<div class="row items2 ">
 					<div class="col-md-4 grid-item ">
 						<div class="picture">
-							<img src="assets/images/dog_collage.jpg" alt="">
+							<img src="assets/images/researh1.jpg" alt="">
 						</div>
 						<div class="pic-inner">
 							<h3><a href="dogbreed_CNN.html">Health and social inequalities in Urban Heat Exposure Areas in New Orleans</a>
