--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
 			</div>
 		</header>
 		<div class="first-content">
-			<div class="pic picture2" style="background: url(assets/images/Waterfront.jpg);">
+			<div class="pic picture2" style="background: url(assets/images/bg4.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
 					<h3>BLOG</h3>
