--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,8 @@
 			</div>
 		</div>
 		</div>
+		</div>
+		</div>
 			<div class="container">
 				<div class="row items2 ">
 					<div class="col-md-4 grid-item ">
