--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h4>Social Jutice;</h4>
 						<br>
 						<br>
-						<h4>Remote Sensing; Geospatila Anlytics</h4>
+						<h4>Remote Sensing; Geospatila Analytics</h4>
 						<h4>GIScience; Mahchine Learning</h4>
 						<h4>WRF-UCM; Predictive Modeling </h4>
 						<br>
