--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 			<div class="pic home-picture" style="background: url(assets/images/bg.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3>Leila's Website</h3>
+					<h3>Climate Resilience Planner</h3>
+					<h3>StoryTeller</h3>
+					<h3>Urban Designer</h3>
 				</div>
 			</div>
 		</div>
