--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
-						<p>I am an experienced enviornmental planner and designer specialized in climate modeling, spatila na;ysis, machine learning and visual communication.</p>
+						<p>I am an experienced enviornmental planner and designer specialized in climate modeling, spatila nalysis, machine learning and visual communication.</p>
 						<br>						
 						<p> My research combines urban planning, environmental modeling, and climate science to address the challenges of climate resilience, with a
 focus on mitigating heat exposure and its social and health inequities. I explore the asymmetric impacts of extreme weather events on vulnerable
