--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			<div class="pic home-picture" style="background: url(assets/images/bg.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3>Climate Resilience Planner</h3>
-					<h3>StoryTeller</h3>
+					<h3>Environmental Planner</h3>
+					<h3>Climate Resilience Expert</h3>
 					<h3>Urban Designer</h3>
 				</div>
 			</div>
