--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 			<div class="pic home-picture" style="background: url(assets/images/bg.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
+					<h2>Leila Bahrami</h2>
+					
 					<h3>Environmental Planner</h3>
 					<h3>Climate Resilience Expert</h3>
-					<h3>Urban Designer</h3>
+					
 				</div>
 			</div>
 		</div>
