--- a/blog_remote_sensing.html
+++ b/blog_remote_sensing.html
@@ -273,15 +273,14 @@
 
     <footer>
       <div class="main-footer">
-        <p> Copyright © 2019 By Xiao WU</p>
+        <p> Copyright © 2024 By Leila Bahrami</p>
         <p>Made with Bootstrap Jquery.</p>
         <div class="icons">
           <ul>
-            <li><a target="_BLANK" href="https://www.linkedin.com/in/xiaowu2018"><i class="fa fa-linkedin"></i> </a></li>
+            <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"></i> </a></li>
 						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
 						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
+						
 						
           </ul>
         </div>
