--- a/blog_remote_sensing.html
+++ b/blog_remote_sensing.html
@@ -279,7 +279,7 @@
           <ul>
             <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"></i> </a></li>
 						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
-						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
+						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"><i class="fa fa-facebook"></i> </a></li>
 						
 						
           </ul>
