--- a/blog_remote_sensing.html
+++ b/blog_remote_sensing.html
@@ -89,9 +89,9 @@
             <div class="col-md-4">
               <div class="line"></div>
               <h6>
-                <em>Dec 2018</br>
+                <em>Dec 2020</br>
                   <br>
-                  Instructor: Allison Lassiter</br>
+                  Instructor: Dana Tomlin</br>
                   <br>
                   Tag: Remote Sensing
                 </em>
