--- a/PECO.html
+++ b/PECO.html
@@ -51,9 +51,10 @@
                 <div class="overlay"></div>
                 <div class="content">
                     <h3>2020 Campus RainWorks Challenge</b>
-                    <h3><b>Growing Together</b>
+                    <h3><b>PECO Environmental Justice (EJ) Study</b>
                     </h3>
-                    <h4>A Community Food Forest for Stormwater Management at Andrew Hamilton School </b>
+                    <h4>Southeastern Pennsylvania Electric Company Environmental
+Justice Area Study </b>
                     </h4>
                 </div>
             </div>
@@ -88,22 +89,21 @@
                         <br>
                         <h4>The Story of How our Winning design proposal is Making a Real Difference to Andrew Hamilton School</h4>
                         <br>
-                        <h3>Project Statement</h3>
+                        <h3>Project Objectives</h3>
                          <p> 
-Andrew Hamilton Elementary School in West Philadelphia lacks green space, healthy food access, and stormwater management, underscoring the need for sustainable, food-producing green stormwater infrastructure (GSI) to support students and the community. Our design will reduce the school’s stormwater fees, mitigate local flooding, alleviate urban heat, and improve access to fresh food. Key features include a green roof, rain gardens, raised beds, a food forest, and permeable pavers. To engage students, we’ll add educational signage, watershed and nutrition-focused curricula, and a mural on urban water resilience. Partnering with school leadership and organizations like the Philadelphia Water Department, the Netter Center, and the Philadelphia Orchard Project, we aim to establish AHS as a sustainable community hub.
+This project aimed to support PECO's commitment to equitable energy access by examining challenges and opportunities within Environmental Justice (EJ) areas in Southeastern Pennsylvania. 
+                          <p>
+                          As the leader responsible for the geospatial components and assessment of the Environmental Justice (EJ) study for PECO, I played a critical role in identifying spatial disparities and opportunities within disadvantaged communities in Southeastern Pennsylvania. My expertise in geospatial technologies and environmental assessment was pivotal in analyzing complex data sets, mapping EJ areas, and providing actionable insights to promote equitable energy access.
                           <br>
                           <br>
-                          <h4>Project Goals</h4>                          
+                          <h4>Project Sections</h4>                          
                           <p>                          
-                          This proposal aims to benefit the environment, students, and the surrounding community through seven goals:
-
-1. Improve water quality in Cobbs Creek and the Delaware River by reducing runoff.
-2. Increase resilience to severe weather by reducing impermeable surfaces and adding rainwater capture.
-3. Create a peaceful garden space to enhance mental well-being for students and residents.
-4. Provide access to fresh produce, promoting healthy eating and connection to food sources.
+                          1. GIS Mapping Application: Developed a secure GIS-based tool to analyze PECO's service area, integrating datasets like demographic statistics, energy usage, and transportation data. The tool facilitated identifying EJ areas and informed case study selection.
+2. Community Profiles: Created detailed profiles for selected urban and suburban EJ neighborhoods, incorporating historical energy burden data, demographics, and access to electrification. These profiles highlighted barriers and opportunities for energy solutions.
+3. Community Engagement: Conducted focus groups and surveys with residents, community leaders, and organizations to map assets, understand local needs, and gather insights on electrification opportunities, such as EV charging infrastructure and home energy solutions.
+4. Environmental and Social Analysis: Assessed air quality challenges, transportation electrification barriers, and household electrification opportunities. Recommendations included equity-focused strategies for infrastructure improvements and community-driven programs.
 5. Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
-6. Engage students by incorporating their ideas into the design process.
-7. Develop GSI-oriented curricula to strengthen STEM education and environmental stewardship.
+
                           <br>
                           <br>
                           <h4>Community Engagement and Education</h4>
