--- a/PECO.html
+++ b/PECO.html
@@ -68,19 +68,10 @@ Justice Area Study </b>
                         </iframe>
                         <br>
                         <br>
-                        <img src="assets/images/EPA01.jpg" alt="">
+                        <img src="assets/images/PECO0101.jpg" alt="">
                         <br>
                         <br>
-                        <img src="assets/images/EPA02.jpg" alt="">
-                        <br>
-                        <br>  
-                        <img src="assets/images/EPA03.jpg" alt="">
-                        <br>
-                        <br> 
-                        <img src="assets/images/EPA04.jpg" alt="">
-                        <br>
-                        <br> 
-                        <img src="assets/images/EPA05.jpg" alt="">
+                        <img src="assets/images/PECO02.jpg" alt="">
                         <br>
                         <br> 
                     </div>
@@ -152,12 +143,9 @@ The Philadelphia Orchard Project will fund plant materials and signage, while th
                 <div class="icons">
                     <ul>
                       <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
-          						<li><a target="_BLANK" href="https://github.com/EchoWOO"><i class="fa fa-github"></i> </a></li>
-          						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-          						<li><a target="_BLANK" href="https://twitter.com/EchoWoo1993"><i class="fa fa-twitter"></i></a></li>
-          						<!-- <li><a target="_BLANK" href="https://www.instagram.com/echo_xiao_wu/"><i class="fa fa-instagram"></i> </a></li> -->
-          						<!-- <li><a target="_BLANK" href="http://behance.net/"><i class="fa fa-behance"></i></a></li> -->
-          						<li><a target="_BLANK" href="https://public.tableau.com/profile/xiao.wu#!/"><i class="fa fa-bar-chart"></i></a></li>
+          						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
+          						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"><i class="fa fa-facebook"></i> </a></li>
+          						        						
                     </ul>
                 </div>
             </div>
