--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -134,6 +134,18 @@ factory closures, and ecological restoration</a></h5>
 
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
+						<img src="assets/images/PECO_bg.jpg" alt="">
+						<div class="overlay">
+							<div class="overlay-inner">
+								<h3><a href="PECO.html">PECO Environmental Justice (EJ) Study</a></h3>
+								<h5><a href="PECO.html">Southeastern Pennsylvania Environmental
+Justice Area Study</a></h5>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
+					<div class="item">
 						<img src="assets/images/EPA_bg1.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
@@ -145,7 +157,6 @@ SCHOOL</a></h5>
 						</div>
 					</div>
 				</div>
-
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
 						<img src="assets/images/urbandesign_bg.jpg" alt="">
