--- a/PECO.html
+++ b/PECO.html
@@ -47,15 +47,13 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/EPA_bg.jpg);">
+            <div class="pic index2-picture" style="background: url(assets/images/EPA_bg1.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3>2020 Campus RainWorks Challenge</b>
-                    <h3><b>PECO Environmental Justice (EJ) Study</b>
-                    </h3>
-                    <h4>Southeastern Pennsylvania Electric Company Environmental
-Justice Area Study </b>
-                    </h4>
+                    <h3>2020 PECO Environmental Justice (EJ) Study</b>
+                    <h3><b>Southeastern Pennsylvania Electric Company Environmental
+Justice Area Study</b>
+                    </h3>                    
                 </div>
             </div>
         </div>
@@ -68,7 +66,7 @@ Justice Area Study </b>
                         </iframe>
                         <br>
                         <br>
-                        <img src="assets/images/PECO0101.jpg" alt="">
+                        <img src="assets/images/PECO01.jpg" alt="">
                         <br>
                         <br>
                         <img src="assets/images/PECO02.jpg" alt="">
